<resources>
    <string name="app_name">Forecast_Final</string>
    <string name="Navigation_drawer_open">Open navigation drawer</string>
    <string name="Navigation_drawer_close">Close navigation drawer</string>
    <string name="OpenDrawer">Open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_Home">Home</string>
    <string name="nav_Categories">Categories</string>
    <string name="nav_Bag">Bag</string>
    <string name="nav_Wishlist">Wishlist</string>
    <string name="nav_Myorder">Myorder</string>
    <string name="nav_Help">Help</string>
    <string name="nav_About_us">About Us</string>
    <string name="nav_Contact">Contact</string>
    <string name="nav_Logout">Logput</string>
    <string name="num1"><u>1.NAME AND ADDRESS</u>
    </string>
    <string name="address"> Address:
82 G2 JOHAR TOWN LAHORE</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Categories</item>
        <item>Bag</item>
        <item>Wishlist</item>
        <item>Myorder</item>
        <item>Help</item>
        <item>About us</item>
        <item>Contact</item>
        <item>Logout</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
