<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/home"
            android:title="@string/nav_Home" />
        <item
            android:id="@+id/nav_Categories"
            android:icon="@drawable/home"
            android:title="@string/nav_Categories" />
        <item
            android:id="@+id/nav_Bag"
            android:icon="@drawable/home"
            android:title="@string/nav_Bag" />

        <item
            android:id="@+id/nav_Wishlist"
            android:icon="@drawable/home"
            android:title="@string/nav_Wishlist" />

        <item
            android:id="@+id/nav_Myorder"
            android:icon="@drawable/home"
            android:title="@string/nav_Myorder" />
        <item
            android:id="@+id/nav_Help"
            android:icon="@drawable/home"
            android:title="@string/nav_Help" />
        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/home"
            android:title="@string/nav_Help" />
        <item
            android:id="@+id/nav_Contact"
            android:icon="@drawable/home"
            android:title="@string/nav_Contact" />
        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/home"
            android:title="@string/nav_Logout" />
    </group>

</menu>